# python-parsing-scripts

./: .gitignore  README.md  REBUILD_PLAN.md  alo.pcap  checktime.sh  examples.py  main.c  main.py  pcap-gen  pyproject.toml  tesh.sh  test-json.py
docs/: EXAMPLES.md  PROJECT_GUIDE.md
json-samples/: sample_0001.json  sample_0002.json  sample_0003.json  sample_0004.json  sample_0005.json  sample_0006.json  sample_0007.json  sample_0008.json  sample_0009.json  sample_0010.json
receiving_csi/: __init__.py  __main__.py  models.py  nexmon.py  pcap.py  receivers.py
tests/: test_main_standalone.py  test_nexmon.py  test_pcap.py
